# FoxBender

./: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  FoxBender.pro  codex_ohje_teralinja_qt_cpp_v_1.md  main.cpp  moc_dxfviewwidget.cpp  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/.cache/clangd/index/: QAction.828B193A9C03A87F.idx  QApplication.3DF3027B5DBCF4FC.idx  QBrush.E3AF9A538CD0D5BD.idx  QCheckBox.6593927F764DE9F5.idx  QColor.667456535F63073A.idx  QColorDialog.69EEA34B8A07F6C6.idx  QCoreApplication.1A49C74605C216ED.idx  QDockWidget.730B3B00D8721246.idx  QDoubleSpinBox.85564154B868F660.idx  QFile.A33F74096CC19811.idx  QFileDialog.6FC9741465986CBD.idx  QFileInfo.2D54D5BC6F63757F.idx  QFont.3CCA1C3063385DC0.idx  QGraphicsEllipseItem.6857F2039F2C47D7.idx  QGraphicsLineItem.958630B640C061E4.idx  QGraphicsPathItem.AC3D54ABEA16F365.idx  QGraphicsRectItem.D5E73D34D9BE4CB3.idx  QGraphicsScene.B15FBB55B2A3B6FB.idx  QGraphicsSimpleTextItem.313558AB2D74EB1A.idx  QGraphicsView.03D3BAF5864BBB9B.idx  QGridLayout.37115FBCE174EF96.idx  QGroupBox.8B9A585ECACCE23E.idx  QHBoxLayout.28562FAD0961F1A0.idx  QHeaderView.649F89E0DDA14297.idx  QInputDialog.48E096AC1B89860D.idx  QJsonArray.A138017970DD0306.idx  QJsonDocument.F54DB88B70EE1177.idx  QJsonObject.2D40377B7477F211.idx  QLabel.CAF211405AB52263.idx  QLineF.187F21C3DAB9153E.idx  QList.1559525900CFA504.idx  QListWidget.E3557255FA3FB171.idx  QMainWindow.5D0926A8A9F8E7F4.idx  QMenu.D3102A12714983FD.idx  QMenuBar.388BF7B71FD20166.idx  QMessageBox.F24C55DE3CFC205F.idx  QMouseEvent.A3192A5CA80A6D0F.idx  QObject.5B6718FB1CA38B5B.idx  QPainter.6091AE99DE45E251.idx  QPainterPath.E2F93A0F56C16D9D.idx  (+566 more)
FoxBender_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
FoxBender_autogen/EWIEGA46WW/: moc_frmmain.cpp  moc_frmmain.cpp.d
FoxBender_autogen/JCA2YNWUYB/: moc_dxfviewwidget.cpp  moc_dxfviewwidget.cpp.d
FoxBender_autogen/YPKJ5OE7LN/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
FoxBender_autogen/include/: ui_frmmain.h  ui_mainwindow.h
build-qmake/: .qmake.stash  FoxBender  moc_dxfviewwidget.cpp  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
dxfrw_vendor_autogen/: deps  moc_predefs.h
i18n/: FoxBender_fi.ts
src/app/: appsettings.cpp  appsettings.h
src/core/: dxfdocument.cpp  dxfdocument.h  dxfentity.cpp  dxfentity.h  geometrymodel.h  layerdefinition.h  projectdocument.cpp  projectdocument.h  toolstation.cpp  toolstation.h
src/io/: foxdxfreader.cpp  foxdxfreader.h  jsonstores.cpp  jsonstores.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/widgets/: dxfviewwidget.cpp  dxfviewwidget.h
